[api] return back GetTransaction by id
