# api-gateway/docs/swagger.yaml
@@ -37,7 +37,7 @@ paths:
       - application/json
       description: commit transaction
       parameters:
-      - description: Transaction
+      - description: transaction
         in: body
         name: tx
         required: true
@@ -59,6 +59,39 @@ paths:
           schema:
             type: string
       summary: PostTransaction
+      tags:
+      - transactions
+  /transaction/id/{tx_id}:
+    get:
+      consumes:
+      - application/json
+      description: get transaction by id
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: tx_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "404":
+          description: Not found
+          schema:
+            type: string
+        "500":
+          description: Internal error
+          schema:
+            type: string
+      summary: GetTransaction
       tags:
       - transactions
   /transaction/period:
